[project]
name = "grey"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "regex>=2026.2.28",
    "sentence-transformers>=5.3.0",
    "uuid>=1.30",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[tool.setuptools.packages.find]
where = ["src"]
