[project]
name = "hybrid-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "gliner>=0.2.26",
    "ipykernel>=7.2.0",
    "keybert>=0.9.0",
    "kuzu>=0.11.3",
    "openai>=2.30.0",
    "pgvector>=0.4.2",
    "psycopg>=3.3.3",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "pytest>=9.0.3",
    "regex>=2026.2.28",
    "rich>=14.3.3",
    "sentence-transformers>=5.3.0",
    "uuid>=1.30",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[build-system]
requires = ["setuptools>=61.0"]
build.backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
